# Multi-Object_tracking-website

./: .gitignore  .gitleaks.toml  LICENSE  README.md  digest.txt  inference.ipynb  plan.md  plan.txt  pyproject.toml  pyrightconfig.json  pytest.ini  repo_summary.txt  requirements.txt  run.py
.github/: dependabot.yml
.github/workflows/: bench-gpu-selfhosted.yml  bench.yml  ci.yml  gitleaks-history.yml  publish-triton-model-bundle.yml
CustomBoostTrack/: LICENSE  README.md  __init__.py  args.py  boost-track-env.yml  dataset.py  default_settings.py  detectors.py  main.py  realtime_ensembling.py  run_with_ensembler.py  run_with_yolo.py  utils.py
CustomBoostTrack/tracker/: __init__.py  assoc.py  boost_track.py  boost_trackrt.py  ecc.py  embedding.py  kalmanfilter.py
app/: app.py  realtime.py  realtimetracking.py  tracking.py  video.py
app/CustomBoostTrack/: __init__.py  detectors.py  realtime_ensembling.py  utils.py  (+2 more)
benchmarks/: README.md
cache/: test.json
docker/: Dockerfile  compose.gpu.yml  compose.triton.localrepo.yml  compose.webml.yml  compose.yml
docs/: api.md  architecture.md  configuration.md  development.md  faq.md  index.md  model_card.md  roadmap_cicd_mlops_checklist.md  triton_from_pt.md  troubleshooting.md
scripts/: benchmark_realtime.py  dev_run.sh  download_models.py  export_yolo_pt_to_onnx.py  github_release_upload.py  make_triton_model_repo.py  manifest_dir.py  publish_triton_model_repo_oci.sh  run_self_hosted_runner_once.sh  run_triton_stack.sh
src/: app.py  realtimetracking.py
tests/: conftest.py  test_config.py  test_error_handling.py  test_integration.py  test_pipeline_contract.py  test_queue_integration.py  test_queue_unit.py  test_realtime.py  test_routes.py  test_tracking_service.py  test_triton_detector_mock.py  test_triton_integration.py  test_video_results.py  test_video_run.py  test_video_upload.py  test_ws_realtime.py
(+54 files in other folders)
