[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mot-web"
version = "0.1.0"
description = "Multi-object tracking web application"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0",
  "numpy>=1.24",
  "opencv-python>=4.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
mot-web = "mot_web.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
